--- a/gui-app/gui/pages/login/login.html
+++ b/gui-app/gui/pages/login/login.html
@@ -14,10 +14,8 @@
 
       <input type="password" name="password" value="email" onFocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" class="email" />
       <input class="btn" type="submit" value="Sign In"/>
-
-      <!-- <a href="#"><div class="btn">Sign In</div></a> <!-- End Btn -->
-      <a href="#"><div id="btn2">Emergency Sign In</div></a> <!-- End Btn -->
     </form>
+    <button id="btn2" onclick="emergencyLogin()">Emergency Sign In</button>
 
   </div> <!-- End Box -->
 
